--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,38 +2,28 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.9'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install scikit-learn pandas joblib flake8
-
-    - name: Lint code
-      run: |
-        flake8 src/
+        pip install -r requirements.txt
 
     - name: Run training script
       run: |
         python src/train.py
-
-    - name: Test DVC pipeline
-      run: |
-        pip install dvc
-        dvc repro
