--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,48 @@
-name: CI
+name: MLOps CI
 
 on:
   push:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-      # Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # 1. Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # Set up Python
+      # 2. Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: '3.11'
 
-      # Upgrade pip
+      # 3. Upgrade pip
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      # Install dependencies
+      # 4. Install DVC
+      - name: Install DVC
+        run: pip install "dvc[s3]"  # replace s3 with your remote type if different
+
+      # 5. Pull data from DVC remote
+      - name: Pull data from DVC
+        run: dvc pull
+
+      # 6. Install project dependencies
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # Install DVC
-      - name: Install DVC
-        run: pip install dvc
-
-      # Pull data from DVC remote
-      - name: Pull DVC data
-        run: dvc pull
-
-      # Run the training script
+      # 7. Run training
       - name: Run training
         run: python src/train.py
+
+      # 8. Optional: list generated files
+      - name: List outputs
+        run: dir models
