--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,48 +1,39 @@
-name: MLOps CI
+name: CI Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout repository
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      # 2. Set up Python
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.9"
 
-      # 3. Upgrade pip
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
 
-      # 4. Install DVC
-      - name: Install DVC
-        run: pip install "dvc[s3]"  # replace s3 with your remote type if different
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
 
-      # 5. Pull data from DVC remote
-      - name: Pull data from DVC
-        run: dvc pull
+    - name: Run linting
+      run: |
+        flake8 src --max-line-length=88
 
-      # 6. Install project dependencies
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+    - name: Run tests
+      run: |
+        pytest tests
 
-      # 7. Run training
-      - name: Run training
-        run: python src/train.py
-
-      # 8. Optional: list generated files
-      - name: List outputs
-        run: dir models
+    - name: Run training script
+      run: |
+        python src/train.py
