Update train_model stage with CI-safe command

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,8 +1,8 @@
 stages:
   train_model:
-    cmd: python src\train.py
+    cmd: python src/train.py
     deps:
-    - data\dataset.csv
-    - src\train.py
+    - data/dataset.csv
+    - src/train.py
     outs:
-    - models\model.pkl
+    - models/model.pkl
