--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,38 +2,34 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.9"
-
-    - name: Upgrade pip
-      run: python -m pip install --upgrade pip
+        python-version: '3.9'
 
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run linting
+      run: flake8 src --max-line-length=88
+
+    - name: Reproduce DVC pipeline
       run: |
-        flake8 src --max-line-length=88
+        pip install "dvc[s3]"   # optional if you use S3 remote
+        dvc pull                # pull dataset from remote
+        dvc repro               # run the pipeline
 
     - name: Run tests
-      run: |
-        pytest tests
-
-    - name: Run training script
-      run: |
-        python src/train.py
+      run: pytest tests
